four-card-feature-section-master/style.css
* {
  box-sizing: border-box;
  margin: 0;
}

body {
  min-width: 20rem;
  font-family: "Poppins", sans-serif;
  background: hsl(0, 0%, 98%);
  font-size: 15px;
}

img {
  max-width: 100%;
  margin-top: 2rem;
  grid-column: 3 / 4;
}

h1,
h2 {
  color: hsl(234, 12%, 34%);
}

p {
  color: hsl(229, 6%, 66%);
}

main {
  width: 86%;
  margin: 10dvh auto;
  display: grid;
  gap: 4rem;
}

/* INTRO CONTENT */
.intro {
  text-align: center;
  display: grid;
  gap: 1.5rem;
  max-width: 35rem;
  margin: 0 auto;
}

.intro__heading--thin {
  display: block;
  font-weight: 200;
}

/* MAIN CONTENT | GRID CONTAINER */
.grid {
  display: grid;
  gap: 1.5rem;
}
/* ========== GRID ITEMS PROPERTIES ==========  */
.grid-item {
  border-radius: 0.5rem;
  background: #fff;
  padding: 1.5rem;
  box-shadow: 0px 10px 20px 10px hsl(215, 41%, 92%);
  display: grid;
  gap: 0.25rem;
  grid-template-columns: repeat(2, 1fr);
}
/* GRID ITEM BORDER COLORS */
.grid-item.supervisor {
  border-top: 4px solid hsl(180, 62%, 55%);
}
.grid-item.team-builder {
  border-top: 4px solid hsl(0, 78%, 62%);
}
.grid-item.karma {
  border-top: 4px solid hsl(34, 97%, 64%);
}
.grid-item.calculator {
  border-top: 4px solid hsl(212, 86%, 64%);
}
.grid-item__heading,
.grid-item__text {
  grid-column: 1 / 4;
}

.grid-item__text {
  font-size: 12px;
}
/* ============ FOR BIG MOBILE SCREENS ============  */
@media (min-width: 601px) {
  body {
    font-size: 1rem;
  }
  h1 {
    font-size: 2rem;
  }
  .grid-item__text {
    font-size: 14px;
  }
}
/* ============== FOR TABLET SCREENS ==============  */
@media (min-width:769px) {
    .grid {
        grid-template-columns: repeat(3, 1fr);
    }
    .grid-item.team-builder, .grid-item.calculator {
        grid-column: 2 / span 2;
    }
    .grid-item.supervisor, .grid-item.karma {
        grid-column: 1 / span 2;
    }
}
/* ========= FOR LARGER SCREENS (LAPTOPS, DESKTOPS, TV SCREENS ========= */
@media (min-width:1025px) {
    main {
        max-width: 80rem;
        margin: 0 auto;
        min-height: 100dvh;
        display: grid;
        place-content: center;
    }
    .grid {
        min-height: fit-content;
        grid-template-rows: repeat(4,117px);
        gap: 2rem;
    }
    .grid-item.supervisor {
        grid-column: 1 / 2;
        grid-row: 2 / 4;
    }
    .grid-item.team-builder {
        grid-column: 2 / 3;
        grid-row: 1 / 3;
    }
    .grid-item.karma {
        grid-column: 2 / 3;
        grid-row: 3 / 5;
    }
    .grid-item.calculator {
        grid-column: 3 / 4;
        grid-row: 2 / 4;
    }   
}

